2A/05_Projet_GL/src/test/deca/context/invalid/complet/91_this_method_non_def.deca
// Description :
//   this avce une Methode  qui n'existe pas 
// Resultats :
//    ligne 12 : ge identificateur non déclaré
// Historique :
//  cree le 18/01/2024

class A {
    void get() {
    }

    void db() {
        this.ge();
    }
    
}